--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
         <div class="links">
             <ul>
                 <li>
-                    <a href="">Meus Projetos</a>
+                    <a href="https://github.com/LucasJaimeRibeiro?tab=repositories">Meus Projetos</a>
                 </li>
                 <li>
                     <a href="">Instagram</a>
                 </li>
                 <li>
-                    <a href="">GitHub</a>
+                    <a href="https://github.com/LucasJaimeRibeiro">GitHub</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/lucas-jaime-ribeiro/">Linkdin</a>
                 </li>
             </ul>
         </div>
@@ -34,4 +37,5 @@
         </div>
     </div>
 </body>
+
 </html>
